syntax = "proto3" ;
package msg ;

option go_package = "/msg" ;

// import "msg/cert.proto" ;

message ProtoVoteBody {
    uint64 Voter = 1 ;
    bytes Signature = 2 ;
}

message ProtoVote {
    ProtoVoteData Data = 1 ;
    ProtoVoteBody Body = 2 ;
}

// VoteData are the parts that are independent of the voter
message ProtoVoteData {
    bytes BlockHash = 1 ; // Bk
    uint64 View = 2 ; // v
    uint64 Owner = 3; //the owner of this block
}

// message BlockCertificate {
// 	msg.Certificate BCert = 1 ;
//     VoteData Data = 2 ;
// }